--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://CannibalClarence.github.io/React_Portfolio",
+  "homepage": "http://CannibalClarence.github.io/React-Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
