--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "gh-pages": "^3.2.3",
     "nodemailer": "^6.7.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -51,8 +52,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
+ 
 }
